--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     implementation project(':bl')
     implementation 'androidx.test.ext:junit-ktx:1.2.1'
     implementation project(':symbol_keyboard')
+    implementation 'com.google.ai.client.generativeai:generativeai:0.9.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
