--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation project(':symbol_keyboard')
 
     implementation 'androidx.fragment:fragment-ktx:1.8.2'
+    implementation 'com.google.ai.client.generativeai:generativeai:0.9.0'
 
     //Dagger - Hilt
     def hilt_version = "2.48"
