--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
 
     implementation 'androidx.fragment:fragment-ktx:1.8.2'
     implementation 'com.google.ai.client.generativeai:generativeai:0.9.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
 
     //Dagger - Hilt
     def hilt_version = "2.48"
